// protoc report.proto --go_out=plugins=grpc:.

syntax = "proto3";

package report;

option go_package = "reportpb";

message Report {
    string CreatedAt = 1;
    string AcquirerID = 2;
    string MerchantID = 3;
    string PaymentID = 4; 
    string ReportID  = 5;
    string ReportType = 6;
    string FileType = 7;
    string FileName = 8;
    string FilePath = 9;
}

message GenerateReportReq {
    Report report = 1; 
}

message GenerateReportRes {
    Report report = 1; 
}

service ReportService {
    rpc GenerateReport(GenerateReportReq) returns (GenerateReportRes);
}